# markflow-app

./: .gitignore  README.md  default.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  file.rs  lib.rs  main.rs  menu.rs  theme.rs
src/editor/: editor.ts  outline.ts
src/themes/: base.css  theme-manager.ts
