[package]
name = "markflow"
version = "1.0.0"
description = "The Agent Native Markdown Editor - Rust Edition"
authors = ["marswave.ai"]
license = "MIT"
repository = "https://github.com/marswaveai/markflow"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "markflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
notify = "6.1"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }
chrono = "0.4"
dirs = "5.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
